# AI-Seekho-2026_1

./: .gitignore  GEMINI.md  README.md
.agent/: rules.md
.github/workflows/: deploy.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  config.json  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: base.py  booking.py  decision.py  discovery.py  intent.py
backend/app/api/: dependencies.py
backend/app/api/routes/: bookings.py  catalog.py  providers.py  requests.py  reviews.py  users.py
backend/app/models/: agent_trace.py  booking.py  provider.py  provider_offering.py  provider_schedule.py  provider_time_off.py  review.py  service_category.py  service_request.py  user.py
backend/app/schemas/: request.py  response.py
backend/app/services/: maps.py  matching.py
backend/scripts/: deploy.sh  seed_mock_data.py  setup_secrets.sh
backend/tests/: conftest.py
backend/tests/test_agents/: test_booking.py  test_decision.py  test_discovery.py  test_intent.py
backend/tests/test_api/: test_bookings.py  test_catalog.py  test_providers.py  test_requests.py  test_reviews.py  test_users.py
backend/tests/test_services/: test_maps.py  test_matching.py
docs/: antigravity_usage.md  api_endpoints.md  architecture.md  db_schema.md  frontend_architecture.md  gcp_deployment.md  github_gcp_deployment.md
frontend/: .env.example  AGENT.md  app.json  package-lock.json  package.json
frontend/app/: _layout.tsx
frontend/constants/: colors.ts  config.ts  tokens.ts
frontend/context/: auth-context.tsx  mode-context.tsx
(+52 files in other folders)
