[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "google-genai>=2.3.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.12.1",
    "sqlmodel>=0.0.38",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
